Force enable HTML Imports for PDF extension.

This patch is a preparation for Shadow DOM V0, Custom Element V0 (CEv0) and HTML Imports removal.
Intent to Deprecate and Remove: http://bit.ly/2RGHe3x
Though we soon make these APIs only available for test by turning the json5 feature flag
from status: "stable" to status: "test", there is browser tests/chrome internal components
that use them.

PDF extension is a one of them and this patch reenable HTML Imports for it.
We should migration it using new APIs.

Bug: 924031
TEST: browser_tests --gtest_filter=*PDFExtensionTest* --disable-blink-features=HTMLImports
Change-Id: I2df31ab55b3bbd954de53f72e185f6ecf431f72b
Reviewed-on: https://chromium-review.googlesource.com/c/1405955
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Commit-Queue: Yoichi Osato <yoichio@chromium.org>
Cr-Commit-Position: refs/heads/master@{#632877}
Former-commit-id: 30cb5927bd6edd1d33eb0bd84b9d7f714e92aff1