extensions/renderer/dispatcher.cc
@@ -886,6 +886,13 @@ void Dispatcher::OnActivateExtension(const std::string& extension_id) {
                                      extension_id);
   }
 
+  // TODO(yoichio): This is temporary switch to have chrome internal extensions
+  // use the old web APIs.
+  // After completion of the migration, we should remove this.
+  // See crbug.com/924031 for detail.
+  if (extension_id == extension_misc::kPdfExtensionId)
+    blink::WebRuntimeFeatures::EnableHTMLImports(true);
+
   InitOriginPermissions(extension);
 
   UpdateActiveExtensions();
