third_party/blink/renderer/platform/exported/web_runtime_features.cc
@@ -636,6 +636,7 @@ void WebRuntimeFeatures::EnableCustomElementsV0(bool enable) {
 
 void WebRuntimeFeatures::EnableHTMLImports(bool enable) {
   RuntimeEnabledFeatures::SetHTMLImportsEnabled(enable);
+  RuntimeEnabledFeatures::SetHTMLImportsOnlyChromeEnabled(enable);
 }
 
 }  // namespace blink
